--- a/ModusFeedReader/Views/Shared/_Layout.cshtml
+++ b/ModusFeedReader/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                 <span class="col-lg-4 col-lg-offset-4 align-text-bottom">
                     <a href="/Home/InitializeFeedContainer" class="navbar-brand-link">Feeds</a>
                     <a href="/Home/Subscriptions" class="navbar-brand-link">Subscriptions</a>
-                    <a href="/SavedFeeds/DisplaySavedFeeds" class="navbar-brand-link">FavoriteFeeds</a>
+                    <a href="/SavedFeeds/DisplaySavedFeeds" class="navbar-brand-link">Saved Feeds</a>
                
                 </span>
 
