--- a/ModusFeedReader/Views/Home/FeedContainer.cshtml
+++ b/ModusFeedReader/Views/Home/FeedContainer.cshtml
@@ -30,7 +30,7 @@
 
                     </div>
                     <div class="col-lg-1 feeds-selector">
-                        <button type="submit" class="btn btn-default">
+                        <button type="submit" class="btn btn-default" data-toggle="tooltip" title="Good luck">
                             <span class="glyphicon glyphicon-search"></span>
                         </button>
                     </div>
@@ -87,7 +87,7 @@
                                             }
                                         </div>
                                         <div class="row">
-                                            <button type="submit" class="btn btn-default" formaction="@Url.Action("SaveFeed", "Home", new { Id = item.Id })"><span class="glyphicon glyphicon-time"></span></button>
+                                            <button type="submit" class="btn btn-default" data-toggle="tooltip" title="Save to read later" formaction="@Url.Action("SaveFeed", "Home", new { Id = item.Id })"><span class="glyphicon glyphicon-time"></span></button>
                                         </div>
                                     </div>
                                 </div>
