--- a/ModusFeedReader/Views/Home/SavedFeeds.cshtml
+++ b/ModusFeedReader/Views/Home/SavedFeeds.cshtml
@@ -53,7 +53,7 @@
                                         }
                                     </div>
                                     <div class="row">
-                                        <button type="submit" class="btn btn-default" formaction="@Url.Action("DeleteSavedFeeds", "SavedFeeds", new { Id = item.Id })"><span class="glyphicon glyphicon-trash"></span></button>
+                                        <button type="submit" class="btn btn-default" data-toggle="tooltip" title="Remove forever" formaction="@Url.Action("DeleteSavedFeeds", "SavedFeeds", new { Id = item.Id })"><span class="glyphicon glyphicon-trash"></span></button>
                                     </div>
                                 </div>
                             </div>
